Fix bubble chart incorrect line position: line is now align with the x-axis ticks

--- a/css/div.css
+++ b/css/div.css
@@ -11,9 +11,18 @@ div.bar {
 .axis line {
     fill: none;
     stroke: black;
+    stroke-width: 1;
     shape-rendering: crispEdges;
 }
 .axis text {
     font-family: sans-serif;
     font-size: 11px;
+}
+
+.grid .tick {
+    stroke: lightgrey;
+    opacity: 0.7;
+}
+.grid path {
+    stroke-width: 0;
 }
